# lunar-lite-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_LICENSES.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release-plz.yml  tyme4rs-spike.yml
data/astronomical/: README.md  delta_t.csv  earth_longitude_terms.txt  leap_month_codes.txt  moon_longitude_terms.txt  nutation_terms.csv  qi_calibration.csv  qi_corrections.txt  shuo_calibration.csv  shuo_corrections.txt
src/: calendar.rs  convert.rs  date.rs  error.rs  four_pillars.rs  julian_day.rs  lib.rs  lunar_month.rs  normalise.rs  normalize.rs  sexagenary.rs  solar_term_datetime.rs  solar_terms.rs  stem_branch.rs  time_index.rs  year_info.rs
src/astronomical/: data.rs  kernel.rs  lunar_month.rs  lunar_year.rs  mod.rs  shouxing.rs  solar_term.rs
tests/: api_surface.rs  compatibility.rs  error_taxonomy.rs  four_pillars.rs  invariants.rs  julian_reform.rs  li_chun.rs  lunar_month_helpers.rs  lunar_to_solar.rs  normalize.rs  serde.rs  sexagenary.rs  solar_term_datetime.rs  solar_terms.rs  solar_to_lunar.rs  stem_branch.rs  time_index.rs  tyme4rs_compatibility.rs  tyme_compatibility.rs  tyme_oracle_compatibility.rs
tests/fixtures/: four_pillars.json  year_info.json
tools/lunar-lite-reference/: package-lock.json  package.json
tools/lunar-lite-reference/scripts/: dump-year-info.mjs  generate-four-pillars-fixtures.mjs  generate-solar-terms.mjs
