[package]
name = "lunar-lite"
version = "1.3.0"
authors = ["Jinyang Wang <jinyang.wang27@outlook.com>"]
edition = "2024"
rust-version = "1.85"
description = "A small Rust library for Chinese lunisolar date conversion."
license = "MIT"
repository = "https://github.com/JinyangWang27/lunar-lite-rs"
readme = "README.md"
build = "build.rs"
keywords = [
    "chinese-calendar",
    "lunar-calendar",
    "lunar",
    "lunisolar",
    "calendar",
]
categories = ["date-and-time"]
include = [
    "Cargo.toml",
    "CHANGELOG.md",
    "LICENSE",
    "THIRD_PARTY_LICENSES.md",
    "README.md",
    "build.rs",
    "data/**",
    "src/**",
]


[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1"
tyme4rs = "=1.5.0"
